finalizando V1
